syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/aryyawijaya/simple-bank/pb";

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string fullName = 3;
    string email = 4;
}

message CreateUserResponse {
    User user = 1;
}
