syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_login.proto";
import "google/api/annotations.proto";

option go_package = "github.com/aryyawijaya/simple-bank/pb";

service SimpleBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create-user"
            body: "*"
        };
    }
    rpc Login (LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/login-user"
            body: "*"
        };
    }
}
